# Automated-job-apply

./: .gitignore  README.md  config.py  main.py  profile.py  pyproject.toml  run_checks.py  test_setup.py  tracker.py
agents/: base.py  indeed.py  instahyre.py  linkedin.py  naukri.py
modes/: aggressive.py  fresher.py  remote.py  safe.py  startup.py
